fix about collapsing to 83em

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ hr {
 .about {
     background-color: #F05F40;
     width: 100vw;
-    height: 76vh;
+    height: 83vh;
     position: relative;
     z-index: -1;
     display: table;
